hotel-cms/k8s/03-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotel-cms
  namespace: hotel-cms
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hotel-cms
  template:
    metadata:
      labels:
        app: hotel-cms
    spec:
      serviceAccountName: hotel-cms-sa
      containers:
        - name: hotel-cms
          image: REPLACE_ECR_URI:latest
          command: ["sh", "-c"]
          args: ["source /shared/env && node server.js"]
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: shared-env
              mountPath: /shared
              readOnly: true
          readinessProbe:
            httpGet:
              path: /login
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /login
              port: 3000
            initialDelaySeconds: 20
            periodSeconds: 15
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 512Mi
      volumes:
        - name: shared-env
          emptyDir:
            medium: Memory
---
apiVersion: v1
kind: Service
metadata:
  name: hotel-cms
  namespace: hotel-cms
spec:
  selector:
    app: hotel-cms
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
